
[package]
name = "solana-bpf-westake"
version = "0.0.1"
description = "WeStake Social Media, the Web3 way!"
authors = ["Marcus Pousette <marcus.pousette@quantleaf.com>"]
license = "Apache-2.0"
edition = "2018"


[features]
no-entrypoint = []
test-bpf = []

[dependencies]
spl-token = { version = "3.2",  features = [ "no-entrypoint" ]  }
spl-math = { version = "0.1", features = [ "no-entrypoint" ] }
spl-token-swap = { version = "2.1.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
thiserror = "1.0"
bincode = "1.3.1"
borsh = "0.9"
borsh-derive = "0.9"
solana-program =  "1.8.1"
arrayref = "0.3.6"

num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
solana-program-test = "1.8.1"
solana-sdk = "1.8.1"
solana-vote-program = "1.8.1"
proptest = "1.0"


[lib]
name = "westake"
crate-type = ["cdylib", "lib"]
