
[package]
name = "solana-bpf-solvei"
version = "0.0.1"
description = "Solana Social Media, the Web3 Vei!"
authors = ["Marcus Pousette <marcus.pousette@quantleaf.com>"]
license = "Apache-2.0"
edition = "2018"


[features]
no-entrypoint = []
test-bpf = []

[dependencies]
spl-token = { version = "3.2",  features = [ "no-entrypoint" ]  }
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program =  "1.8.6"
arrayref = "0.3.6"

num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "=1.8.6"
solana-sdk = "=1.8.6"
[lib]
name = "solvei"
crate-type = ["cdylib", "lib"]
