
[package]
name = "lpost"
version = "0.0.1"
description = "lpost"
authors = []
license = "Apache-2.0"
edition = "2018"


[features]
no-entrypoint = []
test-bpf = []

[dependencies]
spl-token = { version = "3.2",  features = [ "no-entrypoint" ]  }
spl-math = { version = "0.1", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
luser = { version = "0.0.1", path="../luser", features = [ "no-entrypoint" ] }
ltag = { version = "0.0.1", path="../ltag", features = [ "no-entrypoint" ] }

shared = { version = "0.0.1", path = "../shared" }
lchannel = { version = "0.0.1", path="../lchannel", features = [ "no-entrypoint" ] }

thiserror = "1.0"
bincode = "1.3.1"
borsh = "0.9"
borsh-derive = "0.9"
solana-program =  "1.9.4"
arrayref = "0.3.6"

num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
solana-program-test = "1.9.4"
solana-sdk = "1.9.4"
proptest = "1.0"


[lib]
name = "lpost"
crate-type = ["cdylib", "lib"]
