
[package]
name = "lsocial"
version = "0.0.1"
description = "lsocial"
authors = []
license = "Apache-2.0"
edition = "2018"


[features]
no-entrypoint = []
test-bpf = []

[dependencies]
ltag = { version = "0.0.1", path="../ltag", features = [ "no-entrypoint" ] }
lsignforme = { version = "0.0.1", path="../lsignforme", features = [ "no-entrypoint" ] }
shared = { version = "0.0.1", path = "../shared" }


thiserror = "1.0"
bincode = "1.3.1"
borsh = "0.9"
borsh-derive = "0.9"
solana-program =  "1.9.4"
arrayref = "0.3.6"

num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
solana-program-test = "1.9.4"
solana-sdk = "1.9.4"
proptest = "1.0"
serde = "1.0.127"
serde_derive = "1.0.103"

[lib]
name = "lsocial"
crate-type = ["cdylib", "lib"]
