
[package]
name = "ltag"
version = "0.0.1"
description = "User interface"
authors = []
license = "Apache-2.0"
edition = "2018"


[features]
no-entrypoint = []
test-bpf = []

[dependencies]

shared = { version = "0.0.1", path = "../shared" }
spl-token = { version = "3.2",  features = [ "no-entrypoint" ]  }
thiserror = "1.0"
bincode = "1.3.1"
borsh = "0.9"
borsh-derive = "0.9"
solana-program =  "1.9.4"
arrayref = "0.3.6"

num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
solana-program-test = "1.9.4"
solana-sdk = "1.9.4"

[lib]
name = "ltag"
crate-type = ["cdylib", "lib"]
